# adjungo

./: .gitignore  ADJOINT_FIXES_SUMMARY.md  ADJOINT_SENSITIVITY_IMPLEMENTED.md  ADJOINT_SIGN_ISSUE.md  BUG_REPORT.md  CODEX_VS_CLAUDE_COMPARISON.md  FORWARD_SENSITIVITY_IMPLEMENTED.md  HESSIAN_BUG_SUMMARY.md  LTIC_CRANK_NICOLSON_PROGRESS.md  NONLINEAR_AND_SENSITIVITY_STATUS.md  README.md  SCIPY_VALIDATION.md  SENSITIVITY_COMPLETE_STATUS.md  SESSION_FINAL_SUMMARY.md  SESSION_SUMMARY_HESSIAN_FIXES.md  TERMINAL_HESSIAN_BUG_SOLVED.md  TEST_RESULTS_SUMMARY.md  TEST_REVIEW.md  debug_adjoint.py  pyproject.toml  test_cn_debug.py  test_debug_adjoint_sens.py  test_hessian_asymptotic_error.py  test_hessian_components.py  test_hessian_convergence.py  test_hessian_discretization_convergence.py  test_hessian_element_convergence.py  test_hessian_per_timestep_error.py  test_hessian_symmetry.py  test_quadrature_weighted_objective.py  test_sensitivity_demo.py  test_simple.py  test_terminal_hessian_fix.py
adjungo/: __init__.py
adjungo/algebra/: __init__.py  dense.py  operators.py  protocols.py
adjungo/core/: __init__.py  method.py  (+3 more)
docs/: adjoint_sensitivity_insight.md  architecture.md  glm_design_rationale.md  glm_opt.tex  linalg_requirements.tex  multistep_opt.tex  python_implementation.md  runge_kutta_opt.tex
tests/: test_gradient.py  test_integration.py  test_ltic_crank_nicolson.py  test_method.py  test_methods_library.py  test_nonlinear_and_sensitivities.py  test_optimizer.py  test_requirements.py  test_scipy_comparison.py  test_solvers.py  test_stepping.py  test_utils.py
(+23 files in other folders)
